# GAT-diffusers

./: .gitignore  README.md  generate.py  pyproject.toml  requirements.txt  train.py
hub_templates/: modeling_gat.py  pipeline_gat.py
scripts/: convert_gat_checkpoint.py  load_gat_pipeline.py
src/: __init__.py
src/diffusers/: __init__.py  _hf.py
src/diffusers/gat_utils/: __init__.py  config.py  gat.py  loading.py
src/diffusers/gat_utils/losses/: Rp_PT_loss.py  Rp_loss.py  __init__.py
src/diffusers/models/: __init__.py  _hf_imports.py
src/diffusers/models/gat/: __init__.py  discriminator.py  gat.py  generator.py  layers.py
src/diffusers/pipelines/: __init__.py  _labels.py
src/diffusers/pipelines/gat/: __init__.py  gat.py  pipeline_gat.py
tests/: test_diffusers_integration.py
